<resources>
    <string name="app_name">Just Metro Things</string>
    <string name="METRO">METRO</string>
    <string name="SOCIAL_MEDIA">SOCIAL MEDIA</string>
    <string name="PROFILE">PROFILE</string>
    <string name="SIGN_OUT">SIGN OUT</string>
    <string name="FORGET_PASSWORD">Forgot Password ?</string>
    <string name="SIGN_UP">New Here? Sign Up</string>
    <string name="SIGN_IN">SIGN IN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
