<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.raunak.justmetrothings.MainActivity">

    <TextView
        android:id="@+id/profile"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/PROFILE"
        android:clickable="true"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#2c3e50"
        android:textColor="#ffffff"
        android:onClick="profile"/>

    <TextView
        android:id="@+id/metro"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:text="@string/METRO"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#145a32"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/social_media"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:text="@string/SOCIAL_MEDIA"
        android:textSize="30sp"
        android:background="#641e16"
        android:textColor="#ffffff"
        android:gravity="center"/>
</LinearLayout>

