<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_info">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#FFFFFF"
        android:id="@+id/linearLayout">
        <EditText
            android:id="@+id/email_login"
            android:layout_gravity="center"
            android:hint="Email Id"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/password_login"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="Password"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:inputType="textPassword"
            />
        <TextView
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/SIGN_IN"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/signin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:background="#FFFFFF"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/SIGN_UP"
            android:id="@+id/register_here"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/FORGET_PASSWORD"
            android:id="@+id/forgotpassword"/>
    </LinearLayout>
</RelativeLayout>
